add pinia for simple search state mngmt + layouting

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -58,7 +58,9 @@
   font-weight: normal;
 }
 
-body {
+html,
+body,
+#app {
   min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
