--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,7 +3,9 @@
 
 #app {
   max-width: 1280px;
+  padding: 1rem;
   font-weight: normal;
+  height: 100%;
 }
 
 a,
@@ -28,6 +30,6 @@ a,
 
   #app {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 3fr;
   }
 }
